--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -21,6 +21,8 @@
     "schoolType": "المدرسة الثانوية"
   },
   "hero": {
+    "badge": "التسجيل مفتوح للعام 2025-2026",
+    "imageAlt": "حرم ثانوية بلوغ المرام",
     "title": "نبني قادة",
     "titleHighlight": "المستقبل اليوم",
     "description": "مرحباً بكم في ثانوية بلوغ المرام، حيث نرعى العقول، ونبني الشخصية، ونلهم التميز في كل طالب.",
@@ -79,6 +81,9 @@
     "description": "تمكين الطلاب بالمعرفة والقيم والمهارات ليصبحوا قادة الغد.",
     "quickLinks": "روابط سريعة",
     "contactInfo": "معلومات الاتصال",
+    "address": "123 شارع التعليم، مدينة المعرفة، KC 12345",
+    "phone": "+1 234 567 8900",
+    "email": "info@bouloughalmaram.edu",
     "socialHours": "ساعات العمل",
     "schoolHours": "ساعات المدرسة",
     "weekdays": "الإثنين - الجمعة: 7:30 ص - 3:00 م",
@@ -98,40 +103,71 @@
     "tryDifferent": "جرب مصطلح بحث مختلف أو تحقق لاحقاً للحصول على التحديثات."
   },
   "contactPage": {
+    "headerLabel": "تواصل معنا",
     "title": "اتصل بنا",
-    "description": "تواصل معنا. يسعدنا سماعك والإجابة على أي أسئلة قد تكون لديك.",
+    "description": "لديك أسئلة؟ يسعدنا سماعك. أرسل لنا رسالة وسنرد في أقرب وقت ممكن.",
     "address": "العنوان",
+    "addressContent": "123 شارع التعليم\nمدينة المعرفة، KC 12345",
     "phone": "الهاتف",
+    "phoneContent": "+1 234 567 8900\n+1 234 567 8901",
     "email": "البريد الإلكتروني",
-    "hours": "ساعات العمل",
+    "emailContent": "info@bouloughalmaram.edu\nadmissions@bouloughalmaram.edu",
+    "officeHours": "ساعات الدوام",
+    "officeHoursContent": "الإثنين - الجمعة: 7:30 ص - 4:00 م\nالسبت: 8:00 ص - 12:00 م",
     "sendMessage": "أرسل لنا رسالة",
     "formName": "اسمك",
-    "formEmail": "بريدك الإلكتروني",
+    "formEmail": "البريد الإلكتروني",
     "formSubject": "الموضوع",
-    "formMessage": "رسالتك",
+    "formMessage": "الرسالة",
+    "namePlaceholder": "الاسم الكامل",
+    "emailPlaceholder": "john@example.com",
+    "subjectPlaceholder": "كيف يمكننا مساعدتك؟",
+    "messagePlaceholder": "رسالتك...",
     "formSubmit": "إرسال الرسالة",
     "messageSent": "تم إرسال الرسالة!",
+    "toastDescription": "سنرد عليك في أقرب وقت ممكن.",
     "messageSuccess": "شكراً لتواصلك معنا. سنرد عليك قريباً.",
+    "mapPlaceholder": "سيتم عرض الخريطة هنا",
     "findUs": "موقعنا"
   },
   "aboutPage": {
     "title": "من نحن",
     "subtitle": "قصتنا",
-    "historyTitle": "تاريخنا",
-    "historyDescription": "تأسست برؤية لتقديم تعليم استثنائي، وقد كانت ثانوية بلوغ المرام تشكل العقول الشابة منذ أكثر من عقدين. نؤمن بتنمية ليس فقط التميز الأكاديمي، ولكن أيضاً الشخصية والإبداع ومهارات القيادة.",
-    "mission": "رسالتنا",
-    "missionText": "تقديم تعليم عالي الجودة يطور التفكير النقدي والإبداع والشخصية في كل طالب.",
-    "vision": "رؤيتنا",
-    "visionText": "أن نكون مؤسسة رائدة تعد الطلاب ليصبحوا مواطنين عالميين مسؤولين وقادة المستقبل.",
-    "values": "قيمنا",
-    "valuesText": "النزاهة، التميز، الاحترام، الابتكار، والمجتمع هي الركائز التي توجه كل ما نقوم به.",
+    "headerDescription": "اكتشف الرحلة والرسالة والقيم التي تجعل بلوغ المرام مؤسسة رائدة في التعليم.",
+    "heritage": "تراثنا",
+    "heritageTitle": "أكثر من 30 عاماً من التميز التعليمي",
+    "historyPara1": "تأسست ثانوية بلوغ المرام عام 1995 ليكون لها دور ريادي في التميز الأكاديمي والتعليم الأخلاقي. أنشئت المدرسة برؤية لتقديم تعليم ذي جودة يجمع بين التعلم الحديث والقيم الأصيلة.",
+    "historyPara2": "على مر السنوات، نمونا من مؤسسة صغيرة بعدة فصول فقط إلى منشأة تعليمية شاملة تخدم أكثر من 1,200 طالب. وقد برز خريجونا في مجالات متعددة من الطب والهندسة إلى الفنون والأعمال.",
+    "historyPara3": "اليوم نواصل التطور والتكيف مع مشهد التعليم المتغير مع التمسك برسالتنا الأساسية في تنمية أفراد متكاملين يساهمون إيجابياً في المجتمع.",
+    "stats": {
+      "yearFounded": "سنة التأسيس",
+      "students": "طالب",
+      "facultyMembers": "عضو هيئة تدريس",
+      "universityPlacement": "الالتحاق بالجامعة"
+    },
+    "missionTitle": "رسالتنا",
+    "missionContent": "تقديم تعليم شامل ينمي النمو الفكري والشخصية الأخلاقية والمسؤولية الاجتماعية، ويهيئ الطلاب ليكونوا قادة ومساهمين إيجابيين في المجتمع.",
+    "visionTitle": "رؤيتنا",
+    "visionContent": "أن نكون مؤسسة تعليمية رائدة معترفاً بها للتميز الأكاديمي وطرق التدريس المبتكرة وتنمية أفراد متكاملين يجسدون المعرفة والأخلاق والقيادة.",
+    "valuesTitle": "قيمنا",
+    "valuesContent": "التميز في التعليم، واحترام جميع الأفراد، والنزاهة في الأفعال، والالتزام بخدمة المجتمع، والسعي المستمر للمعرفة وتطوير الذات.",
     "whatWeOffer": "ما نقدمه",
+    "programsFacilities": "البرامج والمرافق",
     "academicPrograms": "البرامج الأكاديمية",
-    "academicProgramsDesc": "منهج شامل يغطي العلوم والإنسانيات واللغات والفنون مع معلمين مؤهلين.",
+    "academicProgramsItem1": "العلوم (فيزياء، كيمياء، أحياء)",
+    "academicProgramsItem2": "الرياضيات والإحصاء",
+    "academicProgramsItem3": "اللغات (العربية، الإنجليزية، الفرنسية)",
+    "academicProgramsItem4": "العلوم الاجتماعية والإنسانيات",
     "extracurricular": "الأنشطة اللامنهجية",
-    "extracurricularDesc": "الرياضة والفنون والنوادي وفرص خدمة المجتمع للتطوير الشامل.",
+    "extracurricularItem1": "فرق رياضية ومنافسات",
+    "extracurricularItem2": "برامج الفن والموسيقى",
+    "extracurricularItem3": "النقاش والخطابة العامة",
+    "extracurricularItem4": "أندية خدمة المجتمع",
     "supportServices": "خدمات الدعم",
-    "supportServicesDesc": "الإرشاد والدروس الخصوصية والتوجيه المهني لدعم رحلة كل طالب."
+    "supportServicesItem1": "الإرشاد الأكاديمي",
+    "supportServicesItem2": "التوجيه المهني",
+    "supportServicesItem3": "مركز دعم التعلم",
+    "supportServicesItem4": "برامج مشاركة أولياء الأمور"
   },
   "timetablePage": {
     "title": "الجدول الدراسي",
@@ -142,6 +178,17 @@
     "monday": "الإثنين",
     "tuesday": "الثلاثاء",
     "wednesday": "الأربعاء",
-    "thursday": "الخميس"
+    "thursday": "الخميس",
+    "friday": "الجمعة",
+    "saturday": "السبت",
+    "noClassesAvailable": "لا توجد صفوف متاحة بعد.",
+    "today": "اليوم",
+    "tomorrow": "غداً",
+    "noClassesScheduled": "لا توجد حصص مجدولة",
+    "unknownSubject": "مادة غير معروفة",
+    "minutesLeft": "{{minutes}} دقيقة متبقية",
+    "inMinutes": "خلال {{minutes}} دقيقة",
+    "done": "انتهت",
+    "fullWeekSchedule": "جدول الأسبوع الكامل"
   }
 }
