--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,6 +21,8 @@
     "schoolType": "High School"
   },
   "hero": {
+    "badge": "Admissions Open for 2025-2026",
+    "imageAlt": "Boulough Al-Maram High School Campus",
     "title": "Building Tomorrow's",
     "titleHighlight": "Leaders Today",
     "description": "Welcome to Boulough Al-Maram High School, where we nurture minds, build character, and inspire excellence in every student.",
@@ -79,6 +81,9 @@
     "description": "Empowering students with knowledge, values, and skills to become tomorrow's leaders.",
     "quickLinks": "Quick Links",
     "contactInfo": "Contact Info",
+    "address": "123 Education Street, Knowledge City, KC 12345",
+    "phone": "+1 234 567 8900",
+    "email": "info@bouloughalmaram.edu",
     "socialHours": "Social & Hours",
     "schoolHours": "School Hours",
     "weekdays": "Mon - Fri: 7:30 AM - 3:00 PM",
@@ -98,40 +103,71 @@
     "tryDifferent": "Try a different search term or check back later for updates."
   },
   "contactPage": {
+    "headerLabel": "Get in Touch",
     "title": "Contact Us",
-    "description": "Get in touch with us. We'd love to hear from you and answer any questions you may have.",
+    "description": "Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
     "address": "Address",
+    "addressContent": "123 Education Street\nKnowledge City, KC 12345",
     "phone": "Phone",
+    "phoneContent": "+1 234 567 8900\n+1 234 567 8901",
     "email": "Email",
-    "hours": "Hours",
+    "emailContent": "info@bouloughalmaram.edu\nadmissions@bouloughalmaram.edu",
+    "officeHours": "Office Hours",
+    "officeHoursContent": "Mon - Fri: 7:30 AM - 4:00 PM\nSat: 8:00 AM - 12:00 PM",
     "sendMessage": "Send us a Message",
     "formName": "Your Name",
-    "formEmail": "Your Email",
+    "formEmail": "Email Address",
     "formSubject": "Subject",
-    "formMessage": "Your Message",
+    "formMessage": "Message",
+    "namePlaceholder": "John Doe",
+    "emailPlaceholder": "john@example.com",
+    "subjectPlaceholder": "How can we help you?",
+    "messagePlaceholder": "Your message...",
     "formSubmit": "Send Message",
     "messageSent": "Message Sent!",
+    "toastDescription": "We'll get back to you as soon as possible.",
     "messageSuccess": "Thank you for contacting us. We'll get back to you soon.",
+    "mapPlaceholder": "Map will be displayed here",
     "findUs": "Find Us"
   },
   "aboutPage": {
     "title": "About Us",
     "subtitle": "Our Story",
-    "historyTitle": "Our History",
-    "historyDescription": "Founded with a vision to provide exceptional education, Boulough Al-Maram High School has been shaping young minds for over two decades. We believe in nurturing not just academic excellence, but also character, creativity, and leadership skills.",
-    "mission": "Mission",
-    "missionText": "To provide quality education that develops critical thinking, creativity, and character in every student.",
-    "vision": "Vision",
-    "visionText": "To be a leading institution that prepares students to become responsible global citizens and future leaders.",
-    "values": "Values",
-    "valuesText": "Integrity, Excellence, Respect, Innovation, and Community are the pillars that guide everything we do.",
+    "headerDescription": "Discover the journey, mission, and values that make Boulough Al-Maram a leading institution in education.",
+    "heritage": "Our Heritage",
+    "heritageTitle": "30+ Years of Educational Excellence",
+    "historyPara1": "Founded in 1995, Boulough Al-Maram High School has been a beacon of academic excellence and moral education. Our school was established with a vision to provide quality education that combines modern learning with traditional values.",
+    "historyPara2": "Over the years, we have grown from a small institution with just a few classrooms to a comprehensive educational facility serving over 1,200 students. Our alumni have gone on to excel in various fields, from medicine and engineering to arts and business.",
+    "historyPara3": "Today, we continue to evolve and adapt to the changing educational landscape while staying true to our core mission of developing well-rounded individuals who contribute positively to society.",
+    "stats": {
+      "yearFounded": "Year Founded",
+      "students": "Students",
+      "facultyMembers": "Faculty Members",
+      "universityPlacement": "University Placement"
+    },
+    "missionTitle": "Our Mission",
+    "missionContent": "To provide a comprehensive education that nurtures intellectual growth, moral character, and social responsibility, preparing students to become leaders and positive contributors to society.",
+    "visionTitle": "Our Vision",
+    "visionContent": "To be a leading educational institution recognized for academic excellence, innovative teaching methods, and the development of well-rounded individuals who embody knowledge, ethics, and leadership.",
+    "valuesTitle": "Our Values",
+    "valuesContent": "Excellence in education, respect for all individuals, integrity in actions, commitment to community service, and continuous pursuit of knowledge and self-improvement.",
     "whatWeOffer": "What We Offer",
+    "programsFacilities": "Programs & Facilities",
     "academicPrograms": "Academic Programs",
-    "academicProgramsDesc": "Comprehensive curriculum covering sciences, humanities, languages, and arts with qualified teachers.",
-    "extracurricular": "Extracurricular Activities",
-    "extracurricularDesc": "Sports, arts, clubs, and community service opportunities for holistic development.",
+    "academicProgramsItem1": "Sciences (Physics, Chemistry, Biology)",
+    "academicProgramsItem2": "Mathematics & Statistics",
+    "academicProgramsItem3": "Languages (Arabic, English, French)",
+    "academicProgramsItem4": "Social Sciences & Humanities",
+    "extracurricular": "Extracurricular",
+    "extracurricularItem1": "Sports teams & competitions",
+    "extracurricularItem2": "Art & music programs",
+    "extracurricularItem3": "Debate & public speaking",
+    "extracurricularItem4": "Community service clubs",
     "supportServices": "Support Services",
-    "supportServicesDesc": "Counseling, tutoring, and career guidance to support every student's journey."
+    "supportServicesItem1": "Academic counseling",
+    "supportServicesItem2": "Career guidance",
+    "supportServicesItem3": "Learning support center",
+    "supportServicesItem4": "Parent engagement programs"
   },
   "timetablePage": {
     "title": "Class Timetable",
@@ -142,6 +178,17 @@
     "monday": "Monday",
     "tuesday": "Tuesday",
     "wednesday": "Wednesday",
-    "thursday": "Thursday"
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "noClassesAvailable": "No classes available yet.",
+    "today": "Today",
+    "tomorrow": "Tomorrow",
+    "noClassesScheduled": "No classes scheduled",
+    "unknownSubject": "Unknown Subject",
+    "minutesLeft": "{{minutes}}m left",
+    "inMinutes": "in {{minutes}}m",
+    "done": "Done",
+    "fullWeekSchedule": "Full Week Schedule"
   }
 }
