--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -21,6 +21,8 @@
     "schoolType": "Lycée"
   },
   "hero": {
+    "badge": "Inscriptions ouvertes pour 2025-2026",
+    "imageAlt": "Campus du Lycée Boulough Al-Maram",
     "title": "Former les Leaders de",
     "titleHighlight": "Demain Aujourd'hui",
     "description": "Bienvenue au Lycée Boulough Al-Maram, où nous cultivons les esprits, forgeons le caractère et inspirons l'excellence chez chaque élève.",
@@ -79,6 +81,9 @@
     "description": "Former les élèves avec les connaissances, les valeurs et les compétences pour devenir les leaders de demain.",
     "quickLinks": "Liens Rapides",
     "contactInfo": "Coordonnées",
+    "address": "123 Rue de l'Éducation, Cité du Savoir, KC 12345",
+    "phone": "+1 234 567 8900",
+    "email": "info@bouloughalmaram.edu",
     "socialHours": "Horaires & Réseaux",
     "schoolHours": "Horaires de l'École",
     "weekdays": "Lun - Ven: 7h30 - 15h00",
@@ -98,40 +103,71 @@
     "tryDifferent": "Essayez un autre terme de recherche ou revenez plus tard pour les mises à jour."
   },
   "contactPage": {
+    "headerLabel": "Contactez-Nous",
     "title": "Contactez-Nous",
-    "description": "Prenez contact avec nous. Nous serions ravis de vous entendre et de répondre à vos questions.",
+    "description": "Des questions ? Nous serions ravis de vous entendre. Envoyez-nous un message et nous vous répondrons dès que possible.",
     "address": "Adresse",
+    "addressContent": "123 Rue de l'Éducation\nCité du Savoir, KC 12345",
     "phone": "Téléphone",
+    "phoneContent": "+1 234 567 8900\n+1 234 567 8901",
     "email": "Email",
-    "hours": "Horaires",
-    "sendMessage": "Envoyez-Nous un Message",
+    "emailContent": "info@bouloughalmaram.edu\nadmissions@bouloughalmaram.edu",
+    "officeHours": "Heures d'ouverture",
+    "officeHoursContent": "Lun - Ven: 7h30 - 16h00\nSam: 8h00 - 12h00",
+    "sendMessage": "Envoyez-nous un Message",
     "formName": "Votre Nom",
-    "formEmail": "Votre Email",
+    "formEmail": "Adresse email",
     "formSubject": "Sujet",
-    "formMessage": "Votre Message",
+    "formMessage": "Message",
+    "namePlaceholder": "Jean Dupont",
+    "emailPlaceholder": "jean@exemple.com",
+    "subjectPlaceholder": "Comment pouvons-nous vous aider ?",
+    "messagePlaceholder": "Votre message...",
     "formSubmit": "Envoyer",
-    "messageSent": "Message Envoyé!",
+    "messageSent": "Message Envoyé !",
+    "toastDescription": "Nous vous répondrons dès que possible.",
     "messageSuccess": "Merci de nous avoir contactés. Nous vous répondrons bientôt.",
+    "mapPlaceholder": "La carte sera affichée ici",
     "findUs": "Nous Trouver"
   },
   "aboutPage": {
     "title": "À Propos",
     "subtitle": "Notre Histoire",
-    "historyTitle": "Notre Histoire",
-    "historyDescription": "Fondé avec la vision de fournir une éducation exceptionnelle, le Lycée Boulough Al-Maram forme les jeunes esprits depuis plus de deux décennies. Nous croyons en la cultivation non seulement de l'excellence académique, mais aussi du caractère, de la créativité et des compétences en leadership.",
-    "mission": "Mission",
-    "missionText": "Fournir une éducation de qualité qui développe la pensée critique, la créativité et le caractère chez chaque élève.",
-    "vision": "Vision",
-    "visionText": "Être une institution de premier plan qui prépare les élèves à devenir des citoyens du monde responsables et les leaders de demain.",
-    "values": "Valeurs",
-    "valuesText": "L'intégrité, l'excellence, le respect, l'innovation et la communauté sont les piliers qui guident tout ce que nous faisons.",
+    "headerDescription": "Découvrez le parcours, la mission et les valeurs qui font du Lycée Boulough Al-Maram un établissement d'excellence en éducation.",
+    "heritage": "Notre Héritage",
+    "heritageTitle": "Plus de 30 ans d'excellence éducative",
+    "historyPara1": "Fondé en 1995, le Lycée Boulough Al-Maram est un phare d'excellence académique et d'éducation morale. Notre établissement a été créé avec la vision d'offrir une éducation de qualité alliant apprentissage moderne et valeurs traditionnelles.",
+    "historyPara2": "Au fil des années, nous sommes passés d'une petite structure à quelques salles de classe à un complexe éducatif complet accueillant plus de 1 200 élèves. Nos anciens élèves excellent dans divers domaines, de la médecine et l'ingénierie aux arts et au commerce.",
+    "historyPara3": "Aujourd'hui, nous continuons à évoluer et à nous adapter au paysage éducatif tout en restant fidèles à notre mission : former des individus accomplis qui contribuent positivement à la société.",
+    "stats": {
+      "yearFounded": "Année de fondation",
+      "students": "Élèves",
+      "facultyMembers": "Enseignants",
+      "universityPlacement": "Placement universitaire"
+    },
+    "missionTitle": "Notre Mission",
+    "missionContent": "Offrir une éducation complète qui favorise la croissance intellectuelle, le caractère moral et la responsabilité sociale, en préparant les élèves à devenir des leaders et des acteurs positifs de la société.",
+    "visionTitle": "Notre Vision",
+    "visionContent": "Être un établissement éducatif de premier plan reconnu pour l'excellence académique, les méthodes d'enseignement innovantes et la formation d'individus accomplis incarnant le savoir, l'éthique et le leadership.",
+    "valuesTitle": "Nos Valeurs",
+    "valuesContent": "Excellence en éducation, respect de chacun, intégrité dans l'action, engagement au service de la communauté et quête continue du savoir et de l'amélioration de soi.",
     "whatWeOffer": "Ce Que Nous Offrons",
+    "programsFacilities": "Programmes & Installations",
     "academicPrograms": "Programmes Académiques",
-    "academicProgramsDesc": "Programme complet couvrant les sciences, les humanités, les langues et les arts avec des enseignants qualifiés.",
-    "extracurricular": "Activités Extrascolaires",
-    "extracurricularDesc": "Sports, arts, clubs et opportunités de service communautaire pour un développement holistique.",
-    "supportServices": "Services de Soutien",
-    "supportServicesDesc": "Conseil, tutorat et orientation professionnelle pour accompagner le parcours de chaque élève."
+    "academicProgramsItem1": "Sciences (Physique, Chimie, Biologie)",
+    "academicProgramsItem2": "Mathématiques & Statistiques",
+    "academicProgramsItem3": "Langues (Arabe, Anglais, Français)",
+    "academicProgramsItem4": "Sciences sociales & Humanités",
+    "extracurricular": "Périscolaire",
+    "extracurricularItem1": "Équipes sportives & compétitions",
+    "extracurricularItem2": "Arts & musique",
+    "extracurricularItem3": "Débat & prise de parole",
+    "extracurricularItem4": "Clubs de service communautaire",
+    "supportServices": "Services d'Accompagnement",
+    "supportServicesItem1": "Conseil académique",
+    "supportServicesItem2": "Orientation professionnelle",
+    "supportServicesItem3": "Centre d'aide à l'apprentissage",
+    "supportServicesItem4": "Programmes d'implication des parents"
   },
   "timetablePage": {
     "title": "Emploi du Temps",
@@ -142,6 +178,17 @@
     "monday": "Lundi",
     "tuesday": "Mardi",
     "wednesday": "Mercredi",
-    "thursday": "Jeudi"
+    "thursday": "Jeudi",
+    "friday": "Vendredi",
+    "saturday": "Samedi",
+    "noClassesAvailable": "Aucune classe disponible pour le moment.",
+    "today": "Aujourd'hui",
+    "tomorrow": "Demain",
+    "noClassesScheduled": "Aucun cours prévu",
+    "unknownSubject": "Matière inconnue",
+    "minutesLeft": "{{minutes}} min restantes",
+    "inMinutes": "dans {{minutes}} min",
+    "done": "Terminé",
+    "fullWeekSchedule": "Emploi du temps de la semaine"
   }
 }
